# HebrewPsychologicalLexicons

./: LICENSE  README.md  setup.cfg
src/hepsylex/: Constants.py  Lexicons.py  LexiconsAPI.py  __init__.py
src/hepsylex/Resources/For documentation purposes/: LexiconsCollectionOverview.xlsx  df_all_lexicons.csv  df_example.csv  df_example_out.csv  ~$LexiconsCollectionOverview.xlsx
src/hepsylex/Resources/LexiconsCollection_dev/: ConversationTopics_Topic000.txt  ConversationTopics_Topic003.txt  ConversationTopics_Topic004.txt  ConversationTopics_Topic008.txt  ConversationTopics_Topic012.txt  ConversationTopics_Topic014.txt  ConversationTopics_Topic015.txt  ConversationTopics_Topic018.txt  ConversationTopics_Topic021.txt  ConversationTopics_Topic022.txt  ConversationTopics_Topic034.txt  ConversationTopics_Topic036.txt  ConversationTopics_Topic037.txt  ConversationTopics_Topic040.txt  ConversationTopics_Topic047.txt  ConversationTopics_Topic048.txt  ConversationTopics_Topic049.txt  ConversationTopics_Topic050.txt  ConversationTopics_Topic055.txt  ConversationTopics_Topic057.txt  ConversationTopics_Topic058.txt  ConversationTopics_Topic062.txt  ConversationTopics_Topic063.txt  ConversationTopics_Topic072.txt  ConversationTopics_Topic078.txt  ConversationTopics_Topic080.txt  ConversationTopics_Topic085.txt  ConversationTopics_Topic089.txt  ConversationTopics_Topic090.txt  ConversationTopics_Topic091.txt  ConversationTopics_Topic093.txt  ConversationTopics_Topic095.txt  ConversationTopics_Topic098.txt  ConversationTopics_Topic104.txt  ConversationTopics_Topic110.txt  (+61 more)
(+196 files in other folders)
