[metadata]
name = hepsylex
version = 1.0.4
author = Natalie Shapira
author_email = nd1234@gmail.com
description = Hebrew Psychological Lexicons
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/natalieshapira/HebrewPsychologicalLexicons
project_urls =
    Bug Tracker = https://github.com/natalieshapira/HebrewPsychologicalLexicons/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src